--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "chart.js": "^2.9.1",
+    "mobx": "^5.14.2",
+    "mobx-react": "^6.1.4",
     "react": "^16.11.0",
     "react-chartjs-2": "^2.8.0",
     "react-dom": "^16.11.0",
