--- a/.prettierrc
+++ b/.prettierrc
@@ -5,5 +5,6 @@
   "singleQuote": false,
   "jsxBracketSameLine": true,
   "useTabs": false,
-  "printWidth": 100
+  "printWidth": 100,
+  "arrowParens": "always"
 }
