--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/plugin-proposal-decorators": "^7.6.0",
+    "@babel/plugin-syntax-jsx": "^7.2.0",
     "husky": ">=1",
     "lint-staged": ">=8",
     "prettier": "1.18.2"
