--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-chartjs-2": "^2.8.0",
     "react-dev-utils": "^9.1.0",
     "react-dom": "^16.11.0",
+    "react-ga": "^2.7.0",
     "resolve": "1.12.0",
     "resolve-url-loader": "3.1.0",
     "sass-loader": "7.2.0",
